<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    android:baselineAligned="false"
    android:weightSum="2"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginRight="10dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:srcCompat="@drawable/listastudentow" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"

        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:weightSum="2">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.9">


                <EditText
                    android:id="@+id/etLogin"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView5"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="casual"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textSize="18sp"
                    android:typeface="serif" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView19"
                    android:layout_centerHorizontal="true"
                    android:autofillHints=""
                    android:fontFamily="casual"
                    android:inputType="textPassword"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textSize="18sp"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/etLogin"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/password"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="sans-serif-smallcaps"
                    android:gravity="center"
                    android:text="@string/index_or_email"
                    android:textSize="24sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.1">

                <Button
                    android:id="@+id/button"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="40dp"
                    android:background="?android:attr/colorPrimary"
                    android:focusable="auto"

                    android:onClick="onClickZaloguj"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/checkOptionsRG"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/button"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp">

                    <RadioButton
                        android:id="@+id/rbAdmin"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:checked="true"
                        android:text="@string/admin" />

                    <RadioButton
                        android:id="@+id/rbStudent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/student" />

                </RadioGroup>


            </RelativeLayout>

        </LinearLayout>


    </RelativeLayout>


</LinearLayout>